--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap-4": "^4.0.0",
     "core-js": "^2.4.1",
+    "expr-eval": "^1.2.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "pouchdb": "^6.3.4",
