--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "~1.3.5",
     "dateformat": "^3.0.2",
     "debug": "~2.2.0",
+    "expr-eval": "^1.2.1",
     "express": "~4.13.1",
     "glob": "^5.0.14",
     "lodash": "^3.10.1",
