--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "plantuml.exportSubFolder": true,
 
     "cSpell.words": [
+        "Backend",
         "DATETIME",
+        "Frmdb",
         "Notifs",
         "SUBENTITY"
     ],
