--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test --watch false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "e2e:watch": "watch \"ng e2e -s false\" src e2e --wait=1"
   },
   "private": true,
   "dependencies": {
