--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-spec-reporter": "0.0.32",
     "node-sass": "^4.5.3",
     "pouchdb": "^6.3.4",
     "protractor": "~5.2.0",
