added unit tests and e2e to gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ test:
   script:
   # Run npm test in virtual display mode
   - npm test
+  - npm run e2e
   - cd server && npm test
   cache:
     untracked: true
