--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "ng build",
     "test": "ng test --watch false",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "e2e:watch": "watch \"ng e2e -s false\" src e2e --wait=1"
+    "e2e": "concurrently --success first --kill-others \"cd server && npm start || true\" \"ng e2e --proxy-config proxy.config.json\"",
+    "e2e:watch": "watch \"ng e2e -s false\" src server e2e --wait=1"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +30,7 @@
     "@types/lodash": "^4.14.78",
     "angular2-uuid": "^1.1.1",
     "bootstrap-4": "^4.0.0",
+    "concurrently": "^3.5.1",
     "core-js": "^2.4.1",
     "expr-eval": "^1.2.1",
     "font-awesome": "^4.7.0",
@@ -62,6 +63,7 @@
     "protractor": "~5.2.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "watch": "^1.0.2"
   }
 }
