--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@types/mocha": "^2.2.46",
     "chai": "^4.1.2",
     "mocha": "^4.1.0",
+    "pouchdb-adapter-memory": "^6.4.3",
     "rxjs-marbles": "^2.3.0",
     "rxjs-test": "^5.5.0-beta.0",
     "ts-node": "^3.3.0",
