--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preserve": "rm -rf dist && tsc --inlineSourceMap -p src",
-    "serve": "concurrently --kill-others \"tsc --inlineSourceMap -w -p src\" \"nodemon --inspect dist/server/src/server.js\"",
+    "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"sleep 10 && nodemon --inspect dist/server/src/server.js\"",
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/server/src/server.js",
     "test": "./node_modules/.bin/mocha -r ts-node/register \"src/**/*.spec.ts\""
@@ -12,7 +12,7 @@
   "dependencies": {
     "@types/dateformat": "^1.0.1",
     "@types/express": "^4.0.36",
-    "@types/lodash": "^4.14.68",
+    "@types/lodash": "^4.14.102",
     "@types/node": "^8.0.9",
     "@types/passport": "^0.3.3",
     "body-parser": "~1.13.2",
@@ -23,12 +23,14 @@
     "expr-eval": "^1.2.1",
     "express": "~4.13.1",
     "glob": "^5.0.14",
-    "lodash": "^3.10.1",
+    "lodash": "^4.17.5",
     "morgan": "^1.6.1",
     "pouchdb": "^6.3.4",
     "pouchdb-find": "^6.3.4",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "serve-favicon": "~2.3.0",
+    "typedi": "^0.6.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
