--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ before_script:
 - chmod +x ci/install-chrome
 - ci/install-chrome
 - npm install
+- npm install -g pouchdb-server
 - cd server && npm install
 - cd ..
 
