--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preserve": "rm -rf dist && tsc --inlineSourceMap -p src",
-    "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"sleep 10 && nodemon --inspect dist/server/src/server.js\"",
+    "serve": "concurrently --kill-others \"bash -c './node_modules/.bin/pouchdb-server --in-memory --port 5984'\" \"tsc --inlineSourceMap -w -p src\" \"sleep 10 && nodemon --inspect dist/server/src/server.js\"",
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/server/src/server.js",
     "test": "./node_modules/.bin/mocha -r ts-node/register \"src/**/*.spec.ts\""
@@ -39,6 +39,7 @@
     "chai": "^4.1.2",
     "mocha": "^4.1.0",
     "pouchdb-adapter-memory": "^6.4.3",
+    "pouchdb-server": "^4.0.0",
     "rxjs-marbles": "^2.3.0",
     "rxjs-test": "^5.5.0-beta.0",
     "ts-node": "^3.3.0",
