--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "e2e_serve": "rm -rf dist && tsc --inlineSourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 10 && node dist/server/src/server.js\"",
     "preserve": "rm -rf dist && tsc --inlineSourceMap -p src",
-    "serve": "concurrently --kill-others \"bash -c './node_modules/.bin/pouchdb-server --in-memory --port 5984'\" \"tsc --inlineSourceMap -w -p src\" \"sleep 10 && nodemon --inspect dist/server/src/server.js\"",
+    "inspect": "kill-port 9229 && node --inspect=0.0.0.0:9229 dist/server/src/server.js",
+    "nodemon-inspect": "nodemon --delay 100ms --watch dist --exec \"npm run inspect\"",
+    "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"sleep 10 && npm run nodemon-inspect\"",
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/server/src/server.js",
     "test": "./node_modules/.bin/mocha -r ts-node/register \"src/**/*.spec.ts\""
@@ -22,6 +25,7 @@
     "debug": "~2.2.0",
     "expr-eval": "^1.2.1",
     "express": "~4.13.1",
+    "express-session": "^1.15.6",
     "glob": "^5.0.14",
     "lodash": "^4.17.5",
     "morgan": "^1.6.1",
@@ -30,6 +34,7 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "serve-favicon": "~2.3.0",
+    "source-map-support": "^0.5.3",
     "typedi": "^0.6.1",
     "uuid": "^3.2.1"
   },
@@ -37,8 +42,10 @@
     "@types/chai": "^4.1.0",
     "@types/mocha": "^2.2.46",
     "chai": "^4.1.2",
+    "cross-port-killer": "^1.0.1",
+    "memdown": "^2.0.0",
     "mocha": "^4.1.0",
-    "pouchdb-adapter-memory": "^6.4.3",
+    "nodemon": "^1.14.12",
     "pouchdb-server": "^4.0.0",
     "rxjs-marbles": "^2.3.0",
     "rxjs-test": "^5.5.0-beta.0",
