--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,20 @@
 {
+  "test": {
+    "port": 3000,
+    "transactionsDBUrl": "http://localhost:5984/mwztransactions",
+    "historyDBUrl": "http://localhost:5984/mwzhistory"
+  },
+  "development": {
+    "port": 3000,
+    "transactionsDBUrl": "http://localhost:5984/mwztransactions",
+    "historyDBUrl": "http://localhost:5984/mwzhistory"
+  },
+  "production": {
+    "port": 3000,
+    "transactionsDBUrl": "http://localhost:5984/mwztransactions",
+    "historyDBUrl": "http://localhost:5984/mwzhistory"
+  },
   "couchdb": {
-    "uuid": "a6f894af-0feb-4578-8110-432403e5e79d"
+    "uuid": "59a5076d-f4b5-4023-8152-98251733603f"
   }
 }
