example of more elaborate e2e test, getting all data from Table also added debugging for npm run e2e:watch, just use the e2e debug configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,14 @@
             "restart": "true"
         },
         {
+            "name": "e2e",
+            "type": "node",
+            "request": "attach",
+            "port": 9239,
+            "protocol": "inspector",
+            "restart": "true"
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
