--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test --watch false",
     "lint": "ng lint",
     "e2e": "concurrently --success first --kill-others \"cd server && npm run e2e_serve\" \"sleep 10 && ng e2e --proxy-config proxy.config.json\"",
-    "e2e:watch": "watch \"ng e2e -s false\" src server/src e2e --wait=1"
+    "e2e:watch": "watch \"kill-port 9239 && node --inspect=0.0.0.0:9239 node_modules/protractor/bin/protractor\" src server/src e2e --wait=1"
   },
   "private": true,
   "dependencies": {
