domain cleanup, again :(

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "DATETIME",
         "Frmdb",
         "Notifs",
+        "Overridable",
         "SUBENTITY"
     ],
     "cSpell.enabledLanguageIds": [
