--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "e2e_serve": "rm -rf dist && tsc --inlineSourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 10 && node dist/server/src/server.js\"",
+    "e2e_serve": "rm -rf dist && tsc --inlineSourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 15 && node dist/server/src/server.js\"",
     "preserve": "rm -rf dist && tsc --inlineSourceMap -p src",
     "inspect": "kill-port 9229 && node --inspect=0.0.0.0:9229 dist/server/src/server.js",
     "nodemon-inspect": "nodemon --delay 100ms --watch dist --exec \"npm run inspect\"",
-    "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"sleep 10 && npm run nodemon-inspect\"",
+    "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"wait-port -t 20000 localhost:5984 && sleep 5 && npm run nodemon-inspect\"",
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/server/src/server.js",
     "test": "./node_modules/.bin/mocha -r ts-node/register \"src/**/*.spec.ts\""
