--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"wait-port -t 20000 localhost:5984 && sleep 5 && npm run nodemon-inspect\"",
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/server/src/server.js",
-    "test": "./node_modules/.bin/mocha -r ts-node/register \"src/**/*.spec.ts\""
+    "test": "./node_modules/.bin/mocha \"dist/server/**/*.spec.js\""
   },
   "dependencies": {
     "@types/dateformat": "^1.0.1",
@@ -40,8 +40,10 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
+    "@types/chai-subset": "^1.3.1",
     "@types/mocha": "^2.2.46",
     "chai": "^4.1.2",
+    "chai-subset": "^1.6.0",
     "cross-port-killer": "^1.0.1",
     "memdown": "^2.0.0",
     "mocha": "^4.1.0",
@@ -50,6 +52,7 @@
     "rxjs-marbles": "^2.3.0",
     "rxjs-test": "^5.5.0-beta.0",
     "ts-node": "^3.3.0",
+    "tsc-watch": "^1.0.16",
     "typescript": "^2.4.1"
   }
 }
