testing various expression evaluators

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "core-js": "^2.4.1",
     "expr-eval": "^1.2.1",
     "font-awesome": "^4.7.0",
+    "jsep": "^0.3.3",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "pouchdb": "^6.3.4",
     "pouchdb-find": "^6.3.4",
     "rxjs": "^5.4.2",
