--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
     "test": "./node_modules/.bin/mocha \"dist/server/**/*.spec.js\""
   },
   "dependencies": {
-    "@types/dateformat": "^1.0.1",
     "@types/express": "^4.0.36",
     "@types/lodash": "^4.14.102",
     "@types/node": "^8.0.9",
@@ -21,13 +20,15 @@
     "body-parser": "~1.13.2",
     "concurrently": "^3.5.0",
     "cookie-parser": "~1.3.5",
-    "dateformat": "^3.0.2",
     "debug": "~2.2.0",
     "expr-eval": "^1.2.1",
     "express": "~4.13.1",
     "express-session": "^1.15.6",
+    "expression-eval": "^1.2.0",
     "glob": "^5.0.14",
+    "jsep": "^0.3.3",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
     "morgan": "^1.6.1",
     "pouchdb": "^6.3.4",
     "pouchdb-find": "^6.3.4",
