--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bootstrap-4": "^4.0.0",
     "concurrently": "^3.5.1",
     "core-js": "^2.4.1",
-    "expr-eval": "^1.2.1",
+    "expression-eval": "^1.2.0",
     "font-awesome": "^4.7.0",
     "jsep": "^0.3.3",
     "lodash": "^4.17.4",
