--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,9 @@ image: node:8.9.4
 before_script:
 - chmod +x ci/install-chrome
 - ci/install-chrome
+- rm -rf node_modules
 - npm install
-- cd server && npm install
+- cd server && rm -rf node_modules && npm install
 - cd ..
 
 test:
