--- a/server/package.json
+++ b/server/package.json
@@ -42,10 +42,13 @@
   "devDependencies": {
     "@types/chai": "^4.1.0",
     "@types/chai-subset": "^1.3.1",
+    "@types/jasmine": "^2.8.6",
     "@types/mocha": "^2.2.46",
     "chai": "^4.1.2",
     "chai-subset": "^1.6.0",
     "cross-port-killer": "^1.0.1",
+    "jasmine": "^3.0.0",
+    "jasmine-console-reporter": "^2.0.1",
     "memdown": "^2.0.0",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.12",
