--- a/server/package.json
+++ b/server/package.json
@@ -48,7 +48,7 @@
     "chai-subset": "^1.6.0",
     "cross-port-killer": "^1.0.1",
     "jasmine": "^3.0.0",
-    "jasmine-console-reporter": "^2.0.1",
+    "jasmine-spec-reporter": "^4.2.1",
     "memdown": "^2.0.0",
     "mocha": "^4.1.0",
     "nodemon": "^1.14.12",
