--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/server/src/server.js",
     "pretest": "tsc --inlineSourceMap -p src",
-    "test": "./node_modules/.bin/mocha \"dist/server/**/*.spec.js\""
+    "test": "node dist/server/src/tests/jasmine.js",
+    "test:watch": "watch \"node dist/server/src/tests/jasmine.js\" dist --wait=2 --interval=1"
   },
   "dependencies": {
     "@types/express": "^4.0.36",
@@ -40,23 +41,18 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/chai-subset": "^1.3.1",
     "@types/jasmine": "^2.8.6",
-    "@types/mocha": "^2.2.46",
-    "chai": "^4.1.2",
-    "chai-subset": "^1.6.0",
     "cross-port-killer": "^1.0.1",
     "jasmine": "^3.0.0",
     "jasmine-spec-reporter": "^4.2.1",
     "memdown": "^2.0.0",
-    "mocha": "^4.1.0",
     "nodemon": "^1.14.12",
     "pouchdb-server": "^4.0.0",
     "rxjs-marbles": "^2.3.0",
     "rxjs-test": "^5.5.0-beta.0",
     "ts-node": "^3.3.0",
     "tsc-watch": "^1.0.16",
-    "typescript": "^2.4.1"
+    "typescript": "^2.4.1",
+    "watch": "^1.0.2"
   }
 }
