--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "^4.0.3",
     "@ngrx/store-devtools": "^4.0.0",
     "@types/lodash": "^4.14.78",
+    "@types/pouchdb": "^6.3.2",
     "angular2-uuid": "^1.1.1",
     "bootstrap-4": "^4.0.0",
     "concurrently": "^3.5.1",
