--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,9 @@
     "start": "node dist/server/src/server.js",
     "pretest": "tsc --inlineSourceMap -p src",
     "test": "node dist/server/src/tests/jasmine.js",
-    "test:watch": "watch \"node dist/server/src/tests/jasmine.js\" dist --wait=2 --interval=1"
+    "test:watch": "watch \"node --inspect dist/server/src/tests/jasmine.js\" dist --wait=2 --interval=1"
   },
   "dependencies": {
-    "@types/express": "^4.0.36",
-    "@types/lodash": "^4.14.102",
-    "@types/node": "^8.0.9",
-    "@types/passport": "^0.3.3",
     "body-parser": "~1.13.2",
     "concurrently": "^3.5.0",
     "cookie-parser": "~1.3.5",
@@ -41,6 +37,11 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.0.36",
+    "@types/lodash": "^4.14.102",
+    "@types/node": "^8.0.9",
+    "@types/passport": "^0.3.3",
+    "@types/pouchdb": "^6.3.2",
     "@types/jasmine": "^2.8.6",
     "cross-port-killer": "^1.0.1",
     "jasmine": "^3.0.0",
