--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "cSpell.words": [
         "Backend",
         "DATETIME",
+        "EOMONTH",
         "Frmdb",
         "Notifs",
         "Overridable",
