--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store-devtools": "^4.0.0",
     "@types/lodash": "^4.14.78",
     "@types/pouchdb": "^6.3.2",
+    "acorn": "^5.4.1",
     "angular2-uuid": "^1.1.1",
     "bootstrap-4": "^4.0.0",
     "concurrently": "^3.5.1",
@@ -48,6 +49,7 @@
     "@angular/cli": "^1.6.5",
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
+    "@types/acorn": "^4.0.3",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~9.3.0",
