--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
     "start": "node dist/server/src/server.js",
     "pretest": "tsc --inlineSourceMap -p src",
     "test": "node dist/server/src/tests/jasmine.js",
-    "test:watch": "watch \"node --inspect dist/server/src/tests/jasmine.js\" dist --wait=2 --interval=1"
+    "test:watch": "watch \"node --inspect dist/server/src/tests/jasmine.js\" dist --wait=1 --interval=2"
   },
   "dependencies": {
+    "acorn": "^5.4.1",
     "body-parser": "~1.13.2",
     "concurrently": "^3.5.0",
     "cookie-parser": "~1.3.5",
@@ -37,12 +38,13 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "@types/acorn": "^4.0.3",
     "@types/express": "^4.0.36",
+    "@types/jasmine": "^2.8.6",
     "@types/lodash": "^4.14.102",
     "@types/node": "^8.0.9",
     "@types/passport": "^0.3.3",
     "@types/pouchdb": "^6.3.2",
-    "@types/jasmine": "^2.8.6",
     "cross-port-killer": "^1.0.1",
     "jasmine": "^3.0.0",
     "jasmine-spec-reporter": "^4.2.1",
