--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,33 @@
 image: node:8.9.4
 
 before_script:
-- chmod +x ci/install-chrome
-- ci/install-chrome
-- npm install
-- cd server && npm install
-- cd ..
+  - chmod +x ci/install-chrome
+  - ci/install-chrome
+  - npm install
+  - cd server && npm install
+  - cd ..
 
 test:
   script:
-  # Run npm test in virtual display mode
-  - npm test
-  - cd server && npm test
-  - cd ..
-  - npm run e2e
+    # Run npm test in virtual display mode
+    - npm test
+    - cd server && npm test
+    - cd ..
+    - npm run e2e
+  artifacts:
+    paths:
+      - coverage/
+
+  pages:
+    dependencies:
+      - test
+    script:
+      - mv coverage/ public/
+    artifacts:
+      paths:
+        - public
+      expire_in: 30 days
+    only:
+      - master
+  
   retry: 2
