--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,24 @@
-image: node:8.9.4
+# image: node:8.9.4
 
-before_script:
-  - chmod +x ci/install-chrome
-  - ci/install-chrome
-  - npm install
-  - cd server && npm install
-  - cd ..
+# before_script:
+  # - chmod +x ci/install-chrome
+  # - ci/install-chrome
 
 test:
   stage: test
   script:
-    # Run npm test in virtual display mode
-    - npm test
-    - cd server && npm test
+    - cd be && npm install
     - cd ..
-    - npm run e2e
+    - cd fe && npm install
+    - cd ..
+    - cd be && npm test
+    - cd ..
+    - cd fe && npm test -- --watch=false
+    - cd ..
   artifacts:
     paths:
       - coverage/
+      - karma.log
   retry: 2
 
 pages:
@@ -32,5 +33,3 @@ pages:
     expire_in: 30 days
   only:
     - master
-  
-
