--- a/fe/package.json
+++ b/fe/package.json
@@ -59,6 +59,7 @@
     "@types/pouchdb-adapter-memory": "^6.1.2",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.6.1",
+    "ffmpeg-binaries": "^4.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-marbles": "^0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -70,6 +71,7 @@
     "karma-log-reporter": "0.0.4",
     "karma-spec-reporter": "0.0.32",
     "protractor": "~5.3.0",
+    "protractor-video-reporter": "^0.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
