--- a/be/package.json
+++ b/be/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "acorn": "^5.4.1",
+    "axios": "^0.18.0",
     "body-parser": "~1.13.2",
     "concurrently": "^3.5.0",
     "cookie-parser": "~1.3.5",
