--- a/fe/angular.json
+++ b/fe/angular.json
@@ -53,13 +53,16 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "serve": {
+              "extractCss": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fe:build"
+            "browserTarget": "fe:build:serve"
           },
           "configurations": {
             "production": {
