--- a/fe/package.json
+++ b/fe/package.json
@@ -48,6 +48,7 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@google-cloud/text-to-speech": "^0.3.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.112",
@@ -67,6 +68,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-log-reporter": "0.0.4",
     "karma-spec-reporter": "0.0.32",
+    "mp3-duration": "^1.1.0",
     "protractor": "~5.3.0",
     "protractor-video-reporter": "^0.3.0",
     "ts-node": "~5.0.1",
