--- a/fe/package.json
+++ b/fe/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "concurrently --kill-others \"ng serve --progress=false\" \"ng test --progress=false\" | perl -pe 's!^\\[\\d+\\] !!; s!ERROR in !!; s!^src/app/!fe/src/app/!'",
-    "start": "ng serve --proxy-config proxy.conf.json | perl -pe 's!ERROR in !!; s!^src/app/!fe/src/app/!'",
+    "start": "ng serve --proxy-config proxy.conf.json --source-map | perl -pe 's!ERROR in !!; s!^src/app/!fe/src/app/!'",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,15 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.2.0",
+    "zone.js": "~0.8.26",
+    "@ctrl/ngx-codemirror": "^1.3.9",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/router-store": "^6.0.1",
@@ -30,7 +34,7 @@
     "ag-grid-angular": "^18.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
-    "core-js": "^2.5.4",
+    "codemirror": "^5.41.0",
     "expression-eval": "^1.2.3",
     "jquery": "^3.3.1",
     "jsep": "git+https://github.com/acristu/jsep.git",
@@ -41,37 +45,36 @@
     "pouchdb-adapter-memory": "^7.0.0",
     "pouchdb-debug": "^7.0.0",
     "pouchdb-find": "^7.0.0",
-    "rxjs": "^6.0.0",
     "short-uuid": "^3.0.0",
-    "zone.js": "^0.8.26"
+    "tern": "^0.22.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "~6.2.7",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.112",
     "@types/moment": "^2.13.0",
     "@types/node": "~8.9.4",
     "@types/pouchdb": "^6.3.2",
     "@types/pouchdb-adapter-memory": "^6.1.2",
-    "codelyzer": "~4.2.1",
-    "concurrently": "^3.6.1",
+    "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "^0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~2.9.2",
+    "concurrently": "^3.6.1",
+    "jasmine-marbles": "^0.3.1",
     "karma-log-reporter": "0.0.4",
-    "karma-spec-reporter": "0.0.32",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "karma-spec-reporter": "0.0.32"
   }
 }
