--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "module": "es2015",
     "strictNullChecks": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
