try to drop protractor-video-recorder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,6 @@
     "zenMode.hideTabs": false,
     "editor.minimap.enabled": true,
     "typescript.tsdk": "fe/node_modules/typescript/lib",
-    "typescript.reportStyleChecksAsWarnings": false
+    "typescript.reportStyleChecksAsWarnings": false,
+    "git.ignoreLimitWarning": true
 }
