--- a/fe/package.json
+++ b/fe/package.json
@@ -21,10 +21,6 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26",
-    "@ctrl/ngx-codemirror": "^1.3.9",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/router-store": "^6.0.1",
@@ -34,7 +30,7 @@
     "ag-grid-angular": "^18.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
-    "codemirror": "^5.41.0",
+    "core-js": "^2.5.4",
     "expression-eval": "^1.2.3",
     "jquery": "^3.3.1",
     "jsep": "git+https://github.com/acristu/jsep.git",
@@ -45,8 +41,10 @@
     "pouchdb-adapter-memory": "^7.0.0",
     "pouchdb-debug": "^7.0.0",
     "pouchdb-find": "^7.0.0",
+    "rxjs": "~6.2.0",
     "short-uuid": "^3.0.0",
-    "tern": "^0.22.3"
+    "tern": "^0.22.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
