--- a/fe/package.json
+++ b/fe/package.json
@@ -49,6 +49,7 @@
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@ffmpeg-installer/ffmpeg": "^1.0.16",
     "@google-cloud/text-to-speech": "^0.3.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -58,7 +59,6 @@
     "@types/pouchdb": "^6.3.2",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.6.1",
-    "@ffmpeg-installer/ffmpeg": "^1.0.16",
     "fluent-ffmpeg": "^2.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-marbles": "^0.3.1",
@@ -72,6 +72,7 @@
     "karma-spec-reporter": "0.0.32",
     "mp3-duration": "^1.1.0",
     "protractor": "~5.3.0",
+    "shelljs": "^0.8.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
