--- a/fe/angular.json
+++ b/fe/angular.json
@@ -33,6 +33,7 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/pouchdb-adapter-memory/lib/index.js"
             ]
           },
@@ -90,6 +91,7 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/pouchdb-adapter-memory/lib/index.js"
             ],
             "assets": [
