--- a/fe/package.json
+++ b/fe/package.json
@@ -51,6 +51,8 @@
     "@angular/cli": "~6.2.7",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@ffmpeg-installer/ffmpeg": "^1.0.16",
+    "@google-cloud/text-to-speech": "^0.3.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.112",
@@ -59,25 +61,24 @@
     "@types/pouchdb": "^6.3.2",
     "@types/pouchdb-adapter-memory": "^6.1.2",
     "codelyzer": "~4.3.0",
+    "concurrently": "^3.6.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^7.0.1",
     "jasmine-core": "~2.99.1",
+    "jasmine-marbles": "^0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-log-reporter": "0.0.4",
+    "karma-spec-reporter": "0.0.32",
+    "mp3-duration": "^1.1.0",
     "protractor": "~5.4.0",
+    "shelljs": "^0.8.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2",
-    "concurrently": "^3.6.1",
-    "jasmine-marbles": "^0.3.1",
-    "karma-log-reporter": "0.0.4",
-    "mp3-duration": "^1.1.0",
-    "fs-extra": "^7.0.1",
-    "shelljs": "^0.8.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "@ffmpeg-installer/ffmpeg": "^1.0.16",
-    "@google-cloud/text-to-speech": "^0.3.0"
+    "typescript": "~2.9.2"
   }
 }
