--- a/fe/angular.json
+++ b/fe/angular.json
@@ -29,6 +29,7 @@
             "styles": [
               "./node_modules/ag-grid/dist/styles/ag-grid.css",
               "./node_modules/ag-grid/dist/styles/ag-theme-balham.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
@@ -87,6 +88,7 @@
             "styles": [
               "./node_modules/ag-grid/dist/styles/ag-grid.css",
               "./node_modules/ag-grid/dist/styles/ag-theme-balham.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
