gitlab-ci just UTs on nodejs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,15 +21,15 @@ test:
   #     - karma.log
   retry: 2
 
-pages:
-  stage: deploy
-  script:
-    - mv coverage/ public/
-  dependencies:
-    - test
-  artifacts:
-    paths:
-      - public
-    expire_in: 30 days
-  only:
-    - master
+# pages:
+#   stage: deploy
+#   script:
+#     - mv coverage/ public/
+#   dependencies:
+#     - test
+#   artifacts:
+#     paths:
+#       - public
+#     expire_in: 30 days
+#   only:
+#     - master
