--- a/fe/package.json
+++ b/fe/package.json
@@ -81,6 +81,7 @@
     "karma-spec-reporter": "0.0.32",
     "mp3-duration": "^1.1.0",
     "protractor": "~5.4.0",
+    "robotjs": "^0.5.1",
     "shelljs": "^0.8.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
