Added state diagrams

--- a/fe/package.json
+++ b/fe/package.json
@@ -29,12 +29,15 @@
     "@ngrx/router-store": "^6.0.1",
     "@ngrx/store": "^6.0.1",
     "@ngrx/store-devtools": "^6.0.1",
+    "@swimlane/ngx-charts": "^10.0.0",
+    "@swimlane/ngx-graph": "^5.2.1",
     "@types/fuse": "^2.6.0",
     "ag-grid": "^18.1.1",
     "ag-grid-angular": "^18.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
+    "d3": "^5.7.0",
     "expression-eval": "^1.2.3",
     "fuse.js": "^3.3.0",
     "jquery": "^3.3.1",
