--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {},
   "dependencies": {
     "jsep": "git+https://github.com/acristu/jsep.git",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "pouchdb-collate": "^7.0.0"
   },
   "devDependencies": {
     "@types/acorn": "^4.0.3",
