#86 frmdb_engine_store specs working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "VLOOKUP",
         "endkey",
         "jsep",
+        "objs",
         "startkey"
     ],
     "cSpell.enabledLanguageIds": [
