--- a/fe/package.json
+++ b/fe/package.json
@@ -45,7 +45,12 @@
     "rxjs": "~6.2.0",
     "short-uuid": "^3.0.0",
     "tern": "^0.22.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "jsep": "git+https://github.com/acristu/jsep.git",
+    "lodash": "^4.17.5",
+    "moment": "^2.22.2",
+    "pg": "^7.8.0",
+    "pouchdb-collate": "^7.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
