--- a/be/package.json
+++ b/be/package.json
@@ -46,6 +46,8 @@
     "@types/acorn": "^4.0.3",
     "@types/express": "^4.0.36",
     "@types/jasmine": "^2.8.6",
+    "@types/lodash": "^4.14.120",
+    "@types/moment": "^2.13.0",
     "@types/node": "^8.0.9",
     "@types/passport": "^0.3.3",
     "cross-port-killer": "^1.0.1",
