--- a/storage/package.json
+++ b/storage/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "^7.0.1",
     "jasmine": "^3.3.1",
     "jasmine-spec-reporter": "^4.2.1",
+    "shelljs": "^0.8.3",
     "source-map-support": "^0.5.10",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.4"
