--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,8 @@
 test:
   stage: test
   script:
+    - cd storage && npm install && npm run compile
+    - cd ..
     - cd be && npm install
     - cd ..
     - cd fe && npm install
