--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@
 test:
   stage: test
   script:
-    - cd storage && npm install && npm run compile
+    - cd storage && npm install && npm run compile && npm run initpgdb
     - cd ..
     - cd be && npm install
     - cd ..
