--- a/storage/package.json
+++ b/storage/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cluster-key-slot": "^1.0.12",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "pg": "^7.8.0",
-    "pg-promise": "^8.5.5",
-    "unique-names-generator": "^2.0.1"
+    "pg-promise": "^8.5.5"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
