--- a/be/package.json
+++ b/be/package.json
@@ -12,7 +12,7 @@
     "start": "node dist/be/src/server.js",
     "compile": "tsc --inlineSourceMap -p src",
     "compile:watch": "tsc --inlineSourceMap -p src -w 2>&1 | perl -pe 's!^../src/app/common!\\n./fe/src/app/common!; s!^src/(?\\!app/common)!./be/src/!'",
-    "pretest": "npm run compile",
+    "pretest": "cd ../storage && npm run compile && cd - && npm run compile",
     "test": "node dist/be/src/tests/jasmine.js",
     "jasmine:watch": "watch \"node --inspect dist/be/src/tests/jasmine.js\" dist --wait=1 --interval=2",
     "test:watch": "concurrently --kill-others \"npm run compile -- -w\" \"sleep 2 && npm run jasmine:watch\" "
