--- a/be/package.json
+++ b/be/package.json
@@ -5,13 +5,12 @@
   "scripts": {
     "e2e_serve": "rm -rf dist && tsc --inlineSourceMap -p src && concurrently --kill-others \"./node_modules/.bin/pouchdb-server --in-memory --port 5984\" \"sleep 15 && node dist/be/src/server.js\"",
     "preserve": "rm -rf dist && tsc --inlineSourceMap -p src",
-    "inspect": "kill-port 9229 && node --inspect=0.0.0.0:9229 dist/be/src/server.js",
+    "inspect": "kill-port 9231 && node --inspect=0.0.0.0:9231 dist/be/src/server.js",
     "nodemon-inspect": "nodemon --delay 100ms --watch dist --exec \"npm run inspect\"",
-    "serve": "concurrently --kill-others \"pouchdb-server --in-memory --port 5984\" \"tsc --inlineSourceMap -w -p src\" \"wait-port -t 20000 localhost:5984 && sleep 5 && npm run nodemon-inspect\"",
+    "serve": "concurrently --kill-others \"tsc --inlineSourceMap -w -p src\" \"sleep 40 && npm run nodemon-inspect\"",
     "prestart": "rm -rf dist && tsc --inlineSourceMap -p src",
     "start": "node dist/be/src/server.js",
     "compile": "tsc --inlineSourceMap -p src",
-    "compile:watch": "tsc --inlineSourceMap -p src -w 2>&1 | perl -pe 's!^../src/app/common!\\n./fe/src/app/common!; s!^src/(?\\!app/common)!./be/src/!'",
     "pretest": "npm run compile",
     "test": "node dist/be/src/tests/jasmine.js",
     "jasmine:watch": "watch \"node --inspect dist/be/src/tests/jasmine.js\" dist --wait=1 --interval=2",
