--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -55,6 +55,9 @@
             "type": "shell",
             "options": {
                 "cwd": "./be",
+                "env": {
+                    "FRMDB_STORAGE": "postgres",
+                }
             },
             "args": [
                 "run",
