--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -19,6 +19,7 @@
             "*": [
                 "node_modules/*",
             ],
+            "@core/*": ["src/*"],
             "@storage/*": ["../storage/src/*"],
         },
         "lib": [
