--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,25 @@
-# image: node:8.9.4
-
-# before_script:
-  # - chmod +x ci/install-chrome
-  # - ci/install-chrome
-
 test:
   stage: test
   script:
-    - cd storage && npm install 
-    - cd ..
-    - cd core && npm install 
-    - cd ..
-    - npm run initpgdb
-    - cd be && npm install
-    - cd ..
-    - cd fe && npm install
-    - cd ..
-    - cd be
-    - npm test
-    - FRMDB_STORAGE=postgres npm test
-    - cd ..
-    - docker run --rm --name ci-with-video --cap-add=SYS_ADMIN --user centos registry.gitlab.com/metawiz/febe/ci-with-video:1.0.0 bash -c "source ~/.bashrc && cd && git clone https://gitlab-ci-token:$CI_BUILD_TOKEN@gitlab.com/metawiz/febe.git && cd febe/ && cd storage && npm install && cd .. && cd core && npm install && cd .. && cd fe/ && npm run build && npm install && ng e2e"
-    # - cd fe && npm test -- --watch=false
-    # - cd ..
-  # artifacts:
-  #   paths:
-  #     - coverage/
-  #     - karma.log
-  retry: 2
-
-# pages:
-#   stage: deploy
-#   script:
-#     - mv coverage/ public/
-#   dependencies:
-#     - test
-#   artifacts:
-#     paths:
-#       - public
-#     expire_in: 30 days
-#   only:
-#     - master
+    - docker run
+      --rm
+      --name ci-with-video
+      --cap-add=SYS_ADMIN
+      --user centos
+      registry.gitlab.com/metawiz/febe/ci-with-video:1.0.0
+      bash -c "
+        source ~/.bashrc
+          && cd
+          && git clone https://gitlab-ci-token:$CI_BUILD_TOKEN@gitlab.com/metawiz/febe.git
+          && cd febe/
+          && cd storage
+          && npm install
+          && cd ..
+          && cd core
+          && npm install
+          && cd ..
+          && cd fe/
+          && npm run build
+          && npm install
+          && ng e2e
+        "
