--- a/core/package.json
+++ b/core/package.json
@@ -18,6 +18,7 @@
     "module-alias": "^2.1.0",
     "pg": "^7.8.0",
     "pg-promise": "^8.5.5",
+    "pouchdb-collate": "^7.0.0",
     "short-uuid": "^3.1.0"
   },
   "devDependencies": {
