--- a/be/.env.prod
+++ b/be/.env.prod
@@ -1,6 +1,6 @@
 # Postgres configuration
-PGHOST=localhost
+PGHOST=db
 PGUSER=postgres
 PGDATABASE=postgres
 PGPASSWORD=postgres
-PGPORT=5433
+PGPORT=5432
