fixed nginx deep linking and default index

--- a/fe/formuladb-nginx.conf
+++ b/fe/formuladb-nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 8084 default_server;
   root /usr/share/nginx/html;
+  index formuladb/index.html;
   
   location /api {
     proxy_pass http://be:3000;
@@ -11,5 +12,6 @@ server {
   location / {
     auth_basic              "Restricted";
     auth_basic_user_file    auth.htpasswd;
+    try_files $uri $uri/ /formuladb/index.html;
   }
 }
