--- a/fe/package.json
+++ b/fe/package.json
@@ -10,7 +10,8 @@
     "lint": "ng lint",
     "e2e": "cross-env TARGET=headless ng e2e --port 4300",
     "e2e-with-gui": "cross-env TARGET=gui ng e2e --port 4300",
-    "e2e-with-recordings": "cross-env TARGET=recordings ng e2e --port 4300"
+    "e2e-with-recordings": "cross-env TARGET=recordings ng e2e --port 4300",
+    "e2e-with-recordings-and-audio": "cross-env TARGET=recordings-with-audio ng e2e --port 4300"
   },
   "private": true,
   "dependencies": {
