--- a/fe/package.json
+++ b/fe/package.json
@@ -12,23 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/animations": "^7.2.4",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/router": "^7.2.4",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.10",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
-    "@ngrx/effects": "^6.0.1",
-    "@ngrx/router-store": "^6.0.1",
-    "@ngrx/store": "^6.0.1",
-    "@ngrx/store-devtools": "^6.0.1",
+    "@ngrx/effects": "^7.2.0",
+    "@ngrx/router-store": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
     "@swimlane/ngx-charts": "^10.0.0",
     "@swimlane/ngx-graph": "^5.2.1",
     "@types/fuse": "^2.6.0",
@@ -48,7 +48,7 @@
     "pg": "^7.8.0",
     "popper.js": "^1.14.3",
     "pouchdb-collate": "^7.0.0",
-    "rxjs": "~6.2.0",
+    "rxjs": "^6.4.0",
     "short-uuid": "^3.0.0",
     "tern": "^0.22.3",
     "zone.js": "~0.8.26"
